fix border radius issue thx to fix overflow hidden pb on IE + border-box on footer

--- a/packages/@coorpacademy-components/src/template/app-player/player/slides/slides-player/style.css
+++ b/packages/@coorpacademy-components/src/template/app-player/player/slides/slides-player/style.css
@@ -32,6 +32,7 @@
   padding: 36px 32px 32px;
   width: 100%;
   box-sizing: border-box;
+  border-radius: 3px;
 }
 
 .contentWrapperNoPadding {
